--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ CreateEXE.cmd
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-setup.cmd
+*.cmd
 setup.py
 
 # Installer logs
