--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 comtypes==1.1.10
 future==0.18.2
-keyboard==0.13.5
+pynput==1.7.6
 psutil==5.9.0
-PyQt5==5.15.6
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-pyqt5Custom==1.0.1
+PyQt6==6.2.3
+PyQt6-Qt6==6.2.3
+PyQt6-sip==13.2.1
