task (CMT-46): Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,11 @@ CreateEXE.cmd
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
+test/*
 *.manifest
 *.spec
 *.cmd
+*test*
 setup.py
 
 # Installer logs
