Added docstrings mostly everywhere. Added handler of simple left mouse click on tray icon, that now changes mic state in normal app mode

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+Pipfile
 
 # Spyder project settings
 .spyderproject
@@ -138,3 +139,6 @@ ControlMicTray.db
 
 # Custom autorun
 startMic.vbs
+
+# Other
+software/
