--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 comtypes==1.1.14
 future==0.18.2
+keyboard==0.11.0
+Nuitka==1.1.1
+ordered-set==4.1.0
 psutil==5.9.2
-keyboard==0.13.5
+pycaw==20220416
 PyQt6==6.3.1
 PyQt6-Qt6==6.3.2
 PyQt6-sip==13.4.0
-pycaw==20220416
+pywin32==304
+winshell==0.6
+zstandard==0.18.0
