--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-comtypes==1.1.14
-future==0.18.3
-keyboard==0.11.0
-Nuitka==1.1.1
-ordered-set==4.1.0
-psutil==5.9.2
-pycaw==20220416
-PyQt6==6.3.1
-PyQt6-Qt6==6.3.2
-PyQt6-sip==13.4.0
+comtypes==1.4.7
+keyboard==0.13.5
+psutil==6.0.0
+pycaw==20240210
+PyQt6==6.7.1
+PyQt6-Qt6==6.7.3
+PyQt6_sip==13.8.0
+pywin32==306
 winshell==0.6
-zstandard==0.18.0
